2012-08-14  Philippe Brochard  <pbrochard@common-lisp.net>

	* src/clfswm-util.lisp (eval-from-query-string): Show a notify
	window when updating symobls list for REPL completion.

	* contrib/toolbar.lisp: Add arguments in toolbar modules.

	* src/xlib-util.lisp (event-hook-name): Intern hook name symbol
	in :clfswm package.

2012-08-13  Philippe Brochard  <pbrochard@common-lisp.net>

	* contrib/toolbar.lisp (toolbar-module-text): Print a formatted
	text at module position centered in toolbar.

	* src/xlib-util.lisp (optimize-event-hook): Remove unused event
	hooks.

2012-08-12  Philippe Brochard  <pbrochard@common-lisp.net>

	* contrib/toolbar.lisp: End of toolbar framework.
	(list-toolbar-modules): Add a list toolbar modules function.

2012-08-03  Philippe Brochard  <pbrochard@common-lisp.net>

	* src/clfswm-internal.lisp (show-child): Show unmanaged windows
	on (maybe) current child in all roots.

	* src/clfswm-util.lisp (find-child-under-mouse-in-child-tree):
	Handle children from all roots instead of from  *root-frame*.

2012-07-23  Philippe Brochard  <pbrochard@common-lisp.net>

	* src/clfswm-expose-mode.lisp: New expose mode based on standard
	query input.

2012-06-27  Philippe Brochard  <pbrochard@common-lisp.net>

	* src/clfswm-util.lisp (eval-from-query-string): Add completion
	for eval for query string.

2012-06-26  Philippe Brochard  <pbrochard@common-lisp.net>

	* src/clfswm-query.lisp: Add completion for shell commands.

2012-06-18  Philippe Brochard  <pbrochard@common-lisp.net>

	* src/clfswm-placement.lisp: Each child can have its own border
	size. New binding to change the child border size on the fly.

2012-06-08  Philippe Brochard  <pbrochard@common-lisp.net>

	* src/tools.lisp (process-timers): Call get-internal-real-time
	only once for all times.

2012-06-07  Philippe Brochard  <pbrochard@common-lisp.net>

	* contrib/toolbar.lisp (define-toolbar-hooks): Add auto-hide
	clickable toolbar.